--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ matrix:
       services:
         - docker
       script:
-        - docker-compose run app sh -c "pytest && flake8"
+        - docker-compose run backend sh -c "pytest && flake8"
 #    - language: node_js
 #      node_js:
 #        - 10.16
