--- a/.travis.yml
+++ b/.travis.yml
@@ -7,11 +7,10 @@ matrix:
         - cd backend/
       install:
         - pip install -r requirements.txt
-        - pip install docker-compose
-      services:
-        - docker
+      before_script:
+        - cd app/
       script:
-        - docker-compose run backend sh -c "pytest && flake8"
+        - pytest && flake8
 #    - language: node_js
 #      node_js:
 #        - 10.16
