--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ mccabe==0.6.1
 more-itertools==8.0.2
 packaging==19.2
 pluggy==0.13.1
+psycopg2-binary==2.8.4
 py==1.8.0
 pycodestyle==2.5.0
 pyflakes==2.1.1
