--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.2.3
 attrs==19.3.0
 Django==3.0.1
 djangorestframework==3.11.0
+djangorestframework-jwt==1.11.0
 entrypoints==0.3
 flake8==3.7.9
 importlib-metadata==1.3.0
@@ -13,6 +14,7 @@ psycopg2-binary==2.8.4
 py==1.8.0
 pycodestyle==2.5.0
 pyflakes==2.1.1
+PyJWT==1.7.1
 pyparsing==2.4.5
 pytest==5.3.2
 pytest-django==3.7.0
