--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,12 @@ matrix:
         - cd app/
       script:
         - pytest && flake8
-#    - language: node_js
-#      node_js:
-#        - 10.16
-#      before_install:
-#        - cd frontend/
-#      install:
-#        - yarn install
-#      script:
-#        - yarn test
+    - language: node_js
+      node_js:
+        - 10.16
+      before_install:
+        - cd frontend/
+      install:
+        - yarn install
+      script:
+        - yarn test
