--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 asgiref==3.2.3
 attrs==19.3.0
 Django==3.0.1
+django-cors-headers==3.2.0
 djangorestframework==3.11.0
 djangorestframework-jwt==1.11.0
 entrypoints==0.3
