--- a/.gitignore
+++ b/.gitignore
@@ -146,5 +146,6 @@ pyvenv.cfg
 pip-selfcheck.json
 
 .idea
+.vscode
 
 # End of https://www.toptal.com/developers/gitignore/api/python,virtualenv,elm
