--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,26 +1,20 @@
-asgiref==3.2.3
 attrs==19.3.0
-Django==3.0.7
-django-cors-headers==3.2.0
-djangorestframework==3.11.0
-djangorestframework-jwt==1.11.0
-entrypoints==0.3
-flake8==3.7.9
-importlib-metadata==1.3.0
-mccabe==0.6.1
-more-itertools==8.0.2
-packaging==19.2
+click==7.1.2
+fastapi==0.58.0
+h11==0.9.0
+httptools==0.1.1
+importlib-metadata==1.6.1
+more-itertools==8.4.0
+packaging==20.4
 pluggy==0.13.1
-psycopg2-binary==2.8.4
-py==1.8.0
-pycodestyle==2.5.0
-pyflakes==2.1.1
-PyJWT==1.7.1
-pyparsing==2.4.5
-pytest==5.3.2
-pytest-django==3.7.0
-pytz==2019.3
-six==1.13.0
-sqlparse==0.3.0
-wcwidth==0.1.7
-zipp==0.6.0
+py==1.8.2
+pydantic==1.5.1
+pyparsing==2.4.7
+pytest==5.4.3
+six==1.15.0
+starlette==0.13.4
+uvicorn==0.11.5
+uvloop==0.14.0
+wcwidth==0.2.4
+websockets==8.1
+zipp==3.1.0
