--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,28 +1,43 @@
 {
-  "name": "knbn-app",
-  "version": "1.0.0",
-  "description": "frontend for knbn app",
-  "main": "public/index.html",
+  "name": "frontend",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "start": "npm install && npm run build && npm run dev",
-    "build": "npm run build:elm-spa && npm run build:elm",
-    "build:elm-spa": "elm-spa build .",
-    "build:elm": "elm make src/Main.elm --optimize --output public/dist/elm.js",
-    "dev": "concurrently --raw --kill-others \"npm run dev:elm-spa\" \"npm run dev:elm\"",
-    "dev:elm-spa": "chokidar src/Pages -c \"npm run build:elm-spa\"",
-    "dev:elm": "elm-live src/Main.elm -u -d public -- --debug --output public/dist/elm.js"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
-  "keywords": [
-    "elm",
-    "spa"
-  ],
-  "author": "kwangonya@gmail.com",
-  "license": "MIT",
+  "dependencies": {
+    "ant-design-vue": "^1.6.2",
+    "core-js": "^3.6.5",
+    "vue": "^2.6.11"
+  },
   "devDependencies": {
-    "chokidar-cli": "2.1.0",
-    "concurrently": "5.0.0",
-    "elm": "0.19.1-3",
-    "elm-live": "4.0.2",
-    "elm-spa": "4.1.0"
-  }
+    "@vue/cli-plugin-babel": "~4.4.0",
+    "@vue/cli-plugin-eslint": "~4.4.0",
+    "@vue/cli-service": "~4.4.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^6.2.2",
+    "vue-template-compiler": "^2.6.11"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
